@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2019, 2025, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2019, 2026, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,14 +25,14 @@ package jdk.jpackage.test;
 import static java.nio.file.StandardWatchEventKinds.ENTRY_CREATE;
 import static java.nio.file.StandardWatchEventKinds.ENTRY_MODIFY;
 import static java.util.stream.Collectors.toSet;
+import static jdk.jpackage.internal.util.function.ThrowingBiFunction.toBiFunction;
+import static jdk.jpackage.internal.util.function.ThrowingFunction.toFunction;
 import static jdk.jpackage.internal.util.function.ThrowingSupplier.toSupplier;
 
 import java.io.Closeable;
-import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.PrintStream;
 import java.io.UncheckedIOException;
-import java.lang.reflect.InvocationTargetException;
 import java.nio.file.FileSystems;
 import java.nio.file.Files;
 import java.nio.file.LinkOption;
@@ -41,8 +41,9 @@ import java.nio.file.StandardCopyOption;
 import java.nio.file.StandardWatchEventKinds;
 import java.nio.file.WatchEvent;
 import java.nio.file.WatchKey;
-import java.nio.file.WatchService;
 import java.text.SimpleDateFormat;
+import java.time.Duration;
+import java.time.Instant;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Base64;
@@ -50,6 +51,7 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.Date;
+import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Iterator;
 import java.util.List;
@@ -63,6 +65,7 @@ import java.util.function.BiPredicate;
 import java.util.function.Consumer;
 import java.util.function.Predicate;
 import java.util.function.Supplier;
+import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import jdk.internal.util.OperatingSystem;
@@ -107,24 +110,45 @@ public final class TKit {
         throw throwUnknownPlatformError();
     }).get();
 
-    static void withExtraLogStream(ThrowingRunnable action) {
-        if (extraLogStream != null) {
-            ThrowingRunnable.toRunnable(action).run();
-        } else {
-            try (PrintStream logStream = openLogStream()) {
-                withExtraLogStream(action, logStream);
+    public static void withOutput(ThrowingRunnable<? extends Exception> action, PrintStream out, PrintStream err) {
+        Objects.requireNonNull(action);
+        Objects.requireNonNull(out);
+        Objects.requireNonNull(err);
+
+        try {
+            withState(action, stateBuilder -> {
+                stateBuilder.out(out).err(err);
+            });
+        } finally {
+            try {
+                out.flush();
+            } finally {
+                err.flush();
             }
         }
     }
 
-    static void withExtraLogStream(ThrowingRunnable action, PrintStream logStream) {
-        var oldExtraLogStream = extraLogStream;
-        try {
-            extraLogStream = logStream;
-            ThrowingRunnable.toRunnable(action).run();
-        } finally {
-            extraLogStream = oldExtraLogStream;
-        }
+    public static void withState(ThrowingRunnable<? extends Exception> action, Consumer<State.Builder> stateBuilderMutator) {
+        Objects.requireNonNull(action);
+        Objects.requireNonNull(stateBuilderMutator);
+
+        var stateBuilder = state().buildCopy();
+        stateBuilderMutator.accept(stateBuilder);
+        withState(action, stateBuilder.create());
+    }
+
+    public static void withNewState(ThrowingRunnable<? extends Exception> action) {
+        withState(action, _ -> {});
+    }
+
+    public static void withState(ThrowingRunnable<? extends Exception> action, State state) {
+        Objects.requireNonNull(action);
+        Objects.requireNonNull(state);
+        ScopedValue.where(STATE, state).run(ThrowingRunnable.toRunnable(action));
+    }
+
+    public static State state() {
+        return STATE.orElse(DEFAULT_STATE);
     }
 
     enum RunTestMode {
@@ -140,39 +164,24 @@ public final class TKit {
     static void runTests(List<TestInstance> tests, Set<RunTestMode> modes) {
         Objects.requireNonNull(tests);
         Objects.requireNonNull(modes);
-        if (currentTest != null) {
-            throw new IllegalStateException(
-                    "Unexpected nested or concurrent Test.run() call");
+        if (currentTest() != null) {
+            throw new IllegalStateException("Unexpected nested Test.run() call");
         }
 
-        withExtraLogStream(() -> {
-            tests.stream().forEach(test -> {
-                currentTest = test;
-                try {
-                    if (modes.contains(RunTestMode.FAIL_FAST)) {
-                        ThrowingRunnable.toRunnable(test::run).run();
-                    } else {
-                        ignoreExceptions(test).run();
-                    }
-                } finally {
-                    currentTest = null;
-                    if (extraLogStream != null) {
-                        extraLogStream.flush();
-                    }
+        tests.stream().forEach(test -> {
+            withState(() -> {
+                if (modes.contains(RunTestMode.FAIL_FAST)) {
+                    test.run();
+                } else {
+                    ignoreExceptions(test).run();
                 }
+            }, stateBuilder -> {
+                stateBuilder.currentTest(test);
             });
         });
     }
 
-    static <T> T runAdhocTest(ThrowingSupplier<T> action) {
-        final List<T> box = new ArrayList<>();
-        runAdhocTest(() -> {
-            box.add(action.get());
-        });
-        return box.getFirst();
-    }
-
-    static void runAdhocTest(ThrowingRunnable action) {
+    static void runAdhocTest(ThrowingRunnable<? extends Exception> action) {
         Objects.requireNonNull(action);
 
         final Path workDir = toSupplier(() -> Files.createTempDirectory("jdk.jpackage-test")).get();
@@ -193,41 +202,33 @@ public final class TKit {
         runTests(List.of(test), Set.of(RunTestMode.FAIL_FAST));
     }
 
-    static Runnable ignoreExceptions(ThrowingRunnable action) {
+    static Runnable ignoreExceptions(ThrowingRunnable<? extends Exception> action) {
         return () -> {
             try {
                 try {
                     action.run();
-                } catch (Throwable ex) {
-                    unbox(ex);
+                } catch (Exception ex) {
+                    throw ExceptionBox.unbox(ex);
                 }
-            } catch (Throwable throwable) {
-                printStackTrace(throwable);
+            } catch (Exception | AssertionError t) {
+                printStackTrace(t);
             }
         };
     }
 
-    static void unbox(Throwable throwable) throws Throwable {
-        try {
-            throw throwable;
-        } catch (ExceptionBox | InvocationTargetException ex) {
-            unbox(ex.getCause());
-        }
-    }
-
     public static Path workDir() {
-        return currentTest.workDir();
+        return currentTest().workDir();
     }
 
     static String getCurrentDefaultAppName() {
         // Construct app name from swapping and joining test base name
         // and test function name.
         // Say the test name is `FooTest.testBasic`. Then app name would be `BasicFooTest`.
-        String appNamePrefix = currentTest.functionName();
+        String appNamePrefix = currentTest().functionName();
         if (appNamePrefix != null && appNamePrefix.startsWith("test")) {
             appNamePrefix = appNamePrefix.substring("test".length());
         }
-        return Stream.of(appNamePrefix, currentTest.baseName()).filter(
+        return Stream.of(appNamePrefix, currentTest().baseName()).filter(
                 v -> v != null && !v.isEmpty()).collect(Collectors.joining());
     }
 
@@ -255,10 +256,8 @@ public final class TKit {
 
     static void log(String v) {
         v = addTimestamp(v);
-        System.out.println(v);
-        if (extraLogStream != null) {
-            extraLogStream.println(v);
-        }
+        var state = state();
+        state.out.println(v);
     }
 
     static Path removeRootFromAbsolutePath(Path v) {
@@ -279,8 +278,11 @@ public final class TKit {
     public static void createTextFile(Path filename, Stream<String> lines) {
         trace(String.format("Create [%s] text file...",
                 filename.toAbsolutePath().normalize()));
-        ThrowingRunnable.toRunnable(() -> Files.write(filename,
-                lines.peek(TKit::trace).collect(Collectors.toList()))).run();
+        try {
+            Files.write(filename, lines.peek(TKit::trace).toList());
+        } catch (IOException ex) {
+            throw new UncheckedIOException(ex);
+        }
         trace("Done");
     }
 
@@ -288,16 +290,24 @@ public final class TKit {
             Collection<Map.Entry<String, String>> props) {
         trace(String.format("Create [%s] properties file...",
                 propsFilename.toAbsolutePath().normalize()));
-        ThrowingRunnable.toRunnable(() -> Files.write(propsFilename,
-                props.stream().map(e -> String.join("=", e.getKey(),
-                e.getValue())).peek(TKit::trace).collect(Collectors.toList()))).run();
+        try {
+            Files.write(propsFilename, props.stream().map(e -> {
+                return String.join("=", e.getKey(), e.getValue());
+            }).peek(TKit::trace).toList());
+        } catch (IOException ex) {
+            throw new UncheckedIOException(ex);
+        }
         trace("Done");
     }
 
-    public static void traceFileContents(Path path, String label) throws IOException {
+    public static void traceFileContents(Path path, String label) {
         assertFileExists(path);
         trace(String.format("Dump [%s] %s...", path, label));
-        Files.readAllLines(path).forEach(TKit::trace);
+        try {
+            Files.readAllLines(path).forEach(TKit::trace);
+        } catch (IOException ex) {
+            throw new UncheckedIOException(ex);
+        }
         trace("Done");
     }
 
@@ -307,13 +317,13 @@ public final class TKit {
     }
 
     public static void trace(String v) {
-        if (TRACE) {
+        if (state().trace) {
             log("TRACE: " + v);
         }
     }
 
     private static void traceAssert(String v) {
-        if (TRACE_ASSERTS) {
+        if (state().traceAsserts) {
             log("TRACE: " + v);
         }
     }
@@ -394,7 +404,7 @@ public final class TKit {
         return createTempPath(role, Files::createFile);
     }
 
-    private static Path createTempPath(Path templatePath, ThrowingUnaryOperator<Path> createPath) {
+    private static Path createTempPath(Path templatePath, ThrowingUnaryOperator<Path, IOException> createPath) {
         if (templatePath.isAbsolute()) {
             throw new IllegalArgumentException();
         }
@@ -412,13 +422,11 @@ public final class TKit {
             return createPath.apply(path);
         } catch (IOException ex) {
             throw new UncheckedIOException(ex);
-        } catch (Throwable t) {
-            throw ExceptionBox.rethrowUnchecked(t);
         }
     }
 
     public static Path withTempDirectory(String role,
-            ThrowingConsumer<Path> action) {
+            ThrowingConsumer<Path, ? extends Exception> action) {
         final Path tempDir = ThrowingSupplier.toSupplier(
                 () -> createTempDirectory(role)).get();
         boolean keepIt = true;
@@ -574,8 +582,12 @@ public final class TKit {
 
     public static RuntimeException throwSkippedException(RuntimeException ex) {
         trace("Skip the test: " + ex.getMessage());
-        currentTest.notifySkipped(ex);
+        currentTest().notifySkipped(ex);
         throw ex;
+    }
+
+    public static boolean isSkippedException(Throwable t) {
+        return JtregSkippedExceptionClass.INSTANCE.isInstance(t);
     }
 
     public static Path createRelativePathCopy(final Path file) {
@@ -597,58 +609,63 @@ public final class TKit {
         return file;
     }
 
-    static void waitForFileCreated(Path fileToWaitFor,
-            long timeoutSeconds) throws IOException {
+    public static void waitForFileCreated(Path fileToWaitFor,
+            Duration timeout, Duration afterCreatedTimeout) throws IOException {
+        waitForFileCreated(fileToWaitFor, timeout);
+        // Wait after the file has been created to ensure it is fully written.
+        ThrowingConsumer.<Duration>toConsumer(Thread::sleep).accept(afterCreatedTimeout);
+    }
+
+    private static void waitForFileCreated(Path fileToWaitFor, Duration timeout) throws IOException {
 
         trace(String.format("Wait for file [%s] to be available",
                                                 fileToWaitFor.toAbsolutePath()));
 
-        WatchService ws = FileSystems.getDefault().newWatchService();
+        try (var ws = FileSystems.getDefault().newWatchService()) {
 
-        Path watchDirectory = fileToWaitFor.toAbsolutePath().getParent();
-        watchDirectory.register(ws, ENTRY_CREATE, ENTRY_MODIFY);
+            Path watchDirectory = fileToWaitFor.toAbsolutePath().getParent();
+            watchDirectory.register(ws, ENTRY_CREATE, ENTRY_MODIFY);
 
-        long waitUntil = System.currentTimeMillis() + timeoutSeconds * 1000;
-        for (;;) {
-            long timeout = waitUntil - System.currentTimeMillis();
-            assertTrue(timeout > 0, String.format(
-                    "Check timeout value %d is positive", timeout));
+            var waitUntil = Instant.now().plus(timeout);
+            for (;;) {
+                var remainderTimeout = Instant.now().until(waitUntil);
+                assertTrue(remainderTimeout.isPositive(), String.format(
+                        "Check timeout value %dms is positive", remainderTimeout.toMillis()));
 
-            WatchKey key = ThrowingSupplier.toSupplier(() -> ws.poll(timeout,
-                    TimeUnit.MILLISECONDS)).get();
-            if (key == null) {
-                if (fileToWaitFor.toFile().exists()) {
-                    trace(String.format(
-                            "File [%s] is available after poll timeout expired",
-                            fileToWaitFor));
-                    return;
+                WatchKey key = ThrowingSupplier.toSupplier(() -> {
+                    return ws.poll(remainderTimeout.toMillis(), TimeUnit.MILLISECONDS);
+                }).get();
+                if (key == null) {
+                    if (Files.exists(fileToWaitFor)) {
+                        trace(String.format(
+                                "File [%s] is available after poll timeout expired",
+                                fileToWaitFor));
+                        return;
+                    }
+                    assertUnexpected(String.format("Timeout %dms expired", remainderTimeout.toMillis()));
                 }
-                assertUnexpected(String.format("Timeout expired", timeout));
-            }
 
-            for (WatchEvent<?> event : key.pollEvents()) {
-                if (event.kind() == StandardWatchEventKinds.OVERFLOW) {
-                    continue;
+                for (WatchEvent<?> event : key.pollEvents()) {
+                    if (event.kind() == StandardWatchEventKinds.OVERFLOW) {
+                        continue;
+                    }
+                    Path contextPath = (Path) event.context();
+                    if (Files.exists(fileToWaitFor) && Files.isSameFile(watchDirectory.resolve(contextPath), fileToWaitFor)) {
+                        trace(String.format("File [%s] is available", fileToWaitFor));
+                        return;
+                    }
                 }
-                Path contextPath = (Path) event.context();
-                if (Files.isSameFile(watchDirectory.resolve(contextPath),
-                        fileToWaitFor)) {
-                    trace(String.format("File [%s] is available", fileToWaitFor));
-                    return;
-                }
-            }
 
-            if (!key.reset()) {
-                assertUnexpected("Watch key invalidated");
+                if (!key.reset()) {
+                    assertUnexpected("Watch key invalidated");
+                }
             }
         }
     }
 
     static void printStackTrace(Throwable throwable) {
-        if (extraLogStream != null) {
-            throwable.printStackTrace(extraLogStream);
-        }
-        throwable.printStackTrace();
+        var state = state();
+        throwable.printStackTrace(state.err);
     }
 
     private static String concatMessages(String msg, String msg2) {
@@ -659,7 +676,7 @@ public final class TKit {
     }
 
     public static void assertEquals(long expected, long actual, String msg) {
-        currentTest.notifyAssert();
+        currentTest().notifyAssert();
         if (expected != actual) {
             error(concatMessages(String.format(
                     "Expected [%d]. Actual [%d]", expected, actual),
@@ -670,7 +687,7 @@ public final class TKit {
     }
 
     public static void assertNotEquals(long expected, long actual, String msg) {
-        currentTest.notifyAssert();
+        currentTest().notifyAssert();
         if (expected == actual) {
             error(concatMessages(String.format("Unexpected [%d] value", actual),
                     msg));
@@ -681,7 +698,7 @@ public final class TKit {
     }
 
     public static void assertEquals(boolean expected, boolean actual, String msg) {
-        currentTest.notifyAssert();
+        currentTest().notifyAssert();
         if (expected != actual) {
             error(concatMessages(String.format(
                     "Expected [%s]. Actual [%s]", expected, actual),
@@ -692,7 +709,7 @@ public final class TKit {
     }
 
     public static void assertNotEquals(boolean expected, boolean actual, String msg) {
-        currentTest.notifyAssert();
+        currentTest().notifyAssert();
         if (expected == actual) {
             error(concatMessages(String.format("Unexpected [%s] value", actual),
                     msg));
@@ -704,7 +721,7 @@ public final class TKit {
 
 
     public static void assertEquals(Object expected, Object actual, String msg) {
-        currentTest.notifyAssert();
+        currentTest().notifyAssert();
         if ((actual != null && !actual.equals(expected))
                 || (expected != null && !expected.equals(actual))) {
             error(concatMessages(String.format(
@@ -716,7 +733,7 @@ public final class TKit {
     }
 
     public static void assertNotEquals(Object expected, Object actual, String msg) {
-        currentTest.notifyAssert();
+        currentTest().notifyAssert();
         if ((actual != null && !actual.equals(expected))
                 || (expected != null && !expected.equals(actual))) {
 
@@ -729,7 +746,7 @@ public final class TKit {
     }
 
     public static void assertNull(Object value, String msg) {
-        currentTest.notifyAssert();
+        currentTest().notifyAssert();
         if (value != null) {
             error(concatMessages(String.format("Unexpected not null value [%s]",
                     value), msg));
@@ -739,7 +756,7 @@ public final class TKit {
     }
 
     public static void assertNotNull(Object value, String msg) {
-        currentTest.notifyAssert();
+        currentTest().notifyAssert();
         if (value == null) {
             error(concatMessages("Unexpected null value", msg));
         }
@@ -756,7 +773,7 @@ public final class TKit {
     }
 
     public static void assertTrue(boolean actual, String msg, Runnable onFail) {
-        currentTest.notifyAssert();
+        currentTest().notifyAssert();
         if (!actual) {
             if (onFail != null) {
                 onFail.run();
@@ -768,7 +785,7 @@ public final class TKit {
     }
 
     public static void assertFalse(boolean actual, String msg, Runnable onFail) {
-        currentTest.notifyAssert();
+        currentTest().notifyAssert();
         if (actual) {
             if (onFail != null) {
                 onFail.run();
@@ -786,6 +803,35 @@ public final class TKit {
         } else {
             assertTrue(!path.toFile().exists(), String.format(
                     "Check [%s] path doesn't exist", path));
+        }
+    }
+
+    public static void assertMismatchFileContent(Path a, Path b) {
+        assertFilesMismatch(a, b, true, Optional.empty());
+    }
+
+    public static void assertMismatchFileContent(Path a, Path b, String msg) {
+        assertFilesMismatch(a, b, true, Optional.of(msg));
+    }
+
+    public static void assertSameFileContent(Path a, Path b) {
+        assertFilesMismatch(a, b, false, Optional.empty());
+    }
+
+    public static void assertSameFileContent(Path a, Path b, String msg) {
+        assertFilesMismatch(a, b, false, Optional.of(msg));
+    }
+
+    public static void assertFilesMismatch(Path a, Path b, boolean expectMismatch, Optional<String> msg) {
+        var mismatch = toBiFunction(Files::mismatch).apply(a, b) != -1;
+        if (expectMismatch) {
+            assertTrue(mismatch, msg.orElseGet(() -> {
+                return String.format("Check the content of [%s] and [%s] files mismatch", a, b);
+            }));
+        } else {
+            assertTrue(!mismatch, msg.orElseGet(() -> {
+                return String.format("Check the content of [%s] and [%s] files is the same", a, b);
+            }));
         }
     }
 
@@ -823,7 +869,14 @@ public final class TKit {
     public static void assertSymbolicLinkExists(Path path) {
         assertPathExists(path, true);
         assertTrue(Files.isSymbolicLink(path), String.format
-                ("Check [%s] is a symbolic link", path));
+                ("Check [%s] is a symbolic link", Objects.requireNonNull(path)));
+    }
+
+    public static void assertSymbolicLinkTarget(Path symlinkPath, Path expectedTargetPath) {
+        assertSymbolicLinkExists(symlinkPath);
+        var targetPath = toFunction(Files::readSymbolicLink).apply(symlinkPath);
+        assertEquals(expectedTargetPath, targetPath,
+                String.format("Check the target of the symbolic link [%s]", symlinkPath));
     }
 
     public static void assertFileExists(Path path) {
@@ -845,7 +898,7 @@ public final class TKit {
     }
 
     public static void assertUnexpected(String msg) {
-        currentTest.notifyAssert();
+        currentTest().notifyAssert();
         error(concatMessages("Unexpected", msg));
     }
 
@@ -871,7 +924,7 @@ public final class TKit {
         }
 
         public void match(Set<Path> expected) {
-            currentTest.notifyAssert();
+            currentTest().notifyAssert();
 
             var comm = Comm.compare(content, expected);
             if (!comm.unique1().isEmpty() && !comm.unique2().isEmpty()) {
@@ -898,7 +951,7 @@ public final class TKit {
         }
 
         public void contains(Set<Path> expected) {
-            currentTest.notifyAssert();
+            currentTest().notifyAssert();
 
             var comm = Comm.compare(content, expected);
             if (!comm.unique2().isEmpty()) {
@@ -943,7 +996,7 @@ public final class TKit {
 
     public static void assertStringListEquals(List<String> expected,
             List<String> actual, String msg) {
-        currentTest.notifyAssert();
+        currentTest().notifyAssert();
 
         traceAssert(concatMessages("assertStringListEquals()", msg));
 
@@ -991,12 +1044,13 @@ public final class TKit {
     }
 
     /**
-     * Creates a directory by creating all nonexistent parent directories first
-     * just like java.nio.file.Files#createDirectories() and returns
-     * java.io.Closeable that will delete all created nonexistent parent
+     * Creates a directory by creating all nonexistent parent directories first just
+     * like
+     * {@link Files#createDirectories(Path, java.nio.file.attribute.FileAttribute...)}
+     * and returns java.io.Closeable that will delete all created nonexistent parent
      * directories.
      */
-    public static Closeable createDirectories(Path dir) throws IOException {
+    public static Closeable createDirectories(Path dir) {
         Objects.requireNonNull(dir);
 
         Collection<Path> dirsToDelete = new ArrayList<>();
@@ -1006,7 +1060,12 @@ public final class TKit {
             dirsToDelete.add(curDir);
             curDir = curDir.getParent();
         }
-        Files.createDirectories(dir);
+
+        try {
+            Files.createDirectories(dir);
+        } catch (IOException ex) {
+            throw new UncheckedIOException(ex);
+        }
 
         return new Closeable() {
             @Override
@@ -1024,6 +1083,11 @@ public final class TKit {
             predicate(String::contains);
         }
 
+        TextStreamVerifier(Pattern value) {
+            this(Objects.requireNonNull(value).pattern());
+            predicate(value.asPredicate());
+        }
+
         TextStreamVerifier(TextStreamVerifier other) {
             predicate = other.predicate;
             label = other.label;
@@ -1031,6 +1095,10 @@ public final class TKit {
             createException = other.createException;
             anotherVerifier = other.anotherVerifier;
             value = other.value;
+        }
+
+        public TextStreamVerifier copy() {
+            return new TextStreamVerifier(this);
         }
 
         public TextStreamVerifier label(String v) {
@@ -1041,6 +1109,13 @@ public final class TKit {
         public TextStreamVerifier predicate(BiPredicate<String, String> v) {
             predicate = Objects.requireNonNull(v);
             return this;
+        }
+
+        public TextStreamVerifier predicate(Predicate<String> v) {
+            Objects.requireNonNull(v);
+            return predicate((str, _) -> {
+                return v.test(str);
+            });
         }
 
         public TextStreamVerifier negate() {
@@ -1058,7 +1133,12 @@ public final class TKit {
             return this;
         }
 
-        private String findMatch(Iterator<String> lineIt) {
+        public TextStreamVerifier mutate(Consumer<TextStreamVerifier> mutator) {
+            mutator.accept(this);
+            return this;
+        }
+
+        private String find(Iterator<String> lineIt) {
             while (lineIt.hasNext()) {
                 final var line = lineIt.next();
                 if (predicate.test(line, value)) {
@@ -1073,7 +1153,7 @@ public final class TKit {
         }
 
         public void apply(Iterator<String> lineIt) {
-            final String matchedStr = findMatch(lineIt);
+            final String matchedStr = find(lineIt);
             final String labelStr = Optional.ofNullable(label).orElse("output");
             if (negate) {
                 String msg = String.format(
@@ -1119,6 +1199,11 @@ public final class TKit {
 
             public Group add(Group other) {
                 verifiers.addAll(other.verifiers);
+                return this;
+            }
+
+            public Group mutate(Consumer<Group> mutator) {
+                mutator.accept(this);
                 return this;
             }
 
@@ -1168,13 +1253,16 @@ public final class TKit {
         return new TextStreamVerifier(what);
     }
 
-    private static PrintStream openLogStream() {
-        if (LOG_FILE == null) {
-            return null;
-        }
+    public static TextStreamVerifier assertTextStream(Pattern what) {
+        return new TextStreamVerifier(what);
+    }
 
-        return ThrowingSupplier.toSupplier(() -> new PrintStream(
-                new FileOutputStream(LOG_FILE.toFile(), true))).get();
+    public static Consumer<Iterator<String>> assertEndOfTextStream() {
+        return it -> {
+            var tail = new ArrayList<String>();
+            it.forEachRemaining(tail::add);
+            assertStringListEquals(List.of(), tail, "Check the end of the output");
+        };
     }
 
     public record PathSnapshot(List<String> contentHashes) {
@@ -1186,8 +1274,8 @@ public final class TKit {
             this(hashRecursive(path));
         }
 
-        public static void assertEquals(PathSnapshot a, PathSnapshot b, String msg) {
-            assertStringListEquals(a.contentHashes(), b.contentHashes(), msg);
+        public void assertEquals(PathSnapshot other, String msg) {
+            assertStringListEquals(contentHashes(), other.contentHashes(), msg);
         }
 
         private static List<String> hashRecursive(Path path) {
@@ -1218,15 +1306,6 @@ public final class TKit {
         }
     }
 
-    private static TestInstance currentTest;
-    private static PrintStream extraLogStream;
-
-    private static final boolean TRACE;
-    private static final boolean TRACE_ASSERTS;
-
-    static final boolean VERBOSE_JPACKAGE;
-    static final boolean VERBOSE_TEST_SETUP;
-
     static String getConfigProperty(String propertyName) {
         return System.getProperty(getConfigPropertyName(propertyName));
     }
@@ -1254,37 +1333,18 @@ public final class TKit {
         return tokens.stream().collect(Collectors.toSet());
     }
 
-    static final Path LOG_FILE = Functional.identity(() -> {
-        String val = getConfigProperty("logfile");
-        if (val == null) {
-            return null;
-        }
-        return Path.of(val);
-    }).get();
-
-    static {
-        Set<String> logOptions = tokenizeConfigProperty("suppress-logging");
-        if (logOptions == null) {
-            TRACE = true;
-            TRACE_ASSERTS = true;
-            VERBOSE_JPACKAGE = true;
-            VERBOSE_TEST_SETUP = true;
-        } else if (logOptions.contains("all")) {
-            TRACE = false;
-            TRACE_ASSERTS = false;
-            VERBOSE_JPACKAGE = false;
-            VERBOSE_TEST_SETUP = false;
-        } else {
-            Predicate<Set<String>> isNonOf = options -> {
-                return Collections.disjoint(logOptions, options);
-            };
-
-            TRACE = isNonOf.test(Set.of("trace", "t"));
-            TRACE_ASSERTS = isNonOf.test(Set.of("assert", "a"));
-            VERBOSE_JPACKAGE = isNonOf.test(Set.of("jpackage", "jp"));
-            VERBOSE_TEST_SETUP = isNonOf.test(Set.of("init", "i"));
-        }
+    private static TestInstance currentTest() {
+        return state().currentTest;
     }
+
+    static boolean verboseJPackage() {
+        return state().verboseJPackage;
+    }
+
+    static boolean verboseTestSetup() {
+        return state().verboseTestSetup;
+    }
+
 
     private static final class JtregSkippedExceptionClass extends ClassLoader {
         @SuppressWarnings("unchecked")
@@ -1311,4 +1371,185 @@ public final class TKit {
         static final Class<RuntimeException> INSTANCE = new JtregSkippedExceptionClass().clazz;
 
     }
+
+
+    public static final class State {
+
+        private State(
+                TestInstance currentTest,
+                PrintStream out,
+                PrintStream err,
+                Map<Object, Object> properties,
+                boolean trace,
+                boolean traceAsserts,
+                boolean verboseJPackage,
+                boolean verboseTestSetup) {
+
+            Objects.requireNonNull(out);
+            Objects.requireNonNull(err);
+            Objects.requireNonNull(properties);
+
+            this.currentTest = currentTest;
+            this.out = out;
+            this.err = err;
+            this.properties = Collections.synchronizedMap(properties);
+
+            this.trace = trace;
+            this.traceAsserts = traceAsserts;
+
+            this.verboseJPackage = verboseJPackage;
+            this.verboseTestSetup = verboseTestSetup;
+        }
+
+        Builder buildCopy() {
+            return build().initFrom(this);
+        }
+
+        PrintStream out() {
+            return out;
+        }
+
+        PrintStream err() {
+            return err;
+        }
+
+        Optional<Object> findProperty(Object key) {
+            return Optional.ofNullable(properties.get(Objects.requireNonNull(key)));
+        }
+
+        void setProperty(Object key, Object value) {
+            if (value == null) {
+                properties.remove(Objects.requireNonNull(key));
+            } else {
+                properties.put(Objects.requireNonNull(key), value);
+            }
+        }
+
+        static Builder build() {
+            return new Builder();
+        }
+
+
+        static final class Builder {
+
+            Builder initDefaults() {
+                currentTest = null;
+                out = System.out;
+                err = System.err;
+
+                var logOptions = tokenizeConfigProperty("suppress-logging");
+                if (logOptions == null) {
+                    trace = true;
+                    traceAsserts = true;
+                    verboseJPackage = true;
+                    verboseTestSetup = true;
+                } else if (logOptions.contains("all")) {
+                    trace = false;
+                    traceAsserts = false;
+                    verboseJPackage = false;
+                    verboseTestSetup = false;
+                } else {
+                    Predicate<Set<String>> isNonOf = options -> {
+                        return Collections.disjoint(logOptions, options);
+                    };
+
+                    trace = isNonOf.test(Set.of("trace", "t"));
+                    traceAsserts = isNonOf.test(Set.of("assert", "a"));
+                    verboseJPackage = isNonOf.test(Set.of("jpackage", "jp"));
+                    verboseTestSetup = isNonOf.test(Set.of("init", "i"));
+                }
+
+                mutable = true;
+
+                return this;
+            }
+
+            Builder initFrom(State state) {
+                currentTest = state.currentTest;
+                out = state.out;
+                err = state.err;
+                properties.clear();
+                properties.putAll(state.properties);
+
+                trace = state.trace;
+                traceAsserts = state.traceAsserts;
+
+                verboseJPackage = state.verboseJPackage;
+                verboseTestSetup = state.verboseTestSetup;
+
+                return this;
+            }
+
+            Builder currentTest(TestInstance v) {
+                currentTest = v;
+                return this;
+            }
+
+            Builder out(PrintStream v) {
+                out = v;
+                return this;
+            }
+
+            Builder err(PrintStream v) {
+                err = v;
+                return this;
+            }
+
+            Builder property(Object key, Object value) {
+                if (value == null) {
+                    properties.remove(Objects.requireNonNull(key));
+                } else {
+                    properties.put(Objects.requireNonNull(key), value);
+                }
+                return this;
+            }
+
+            Builder mutable(boolean v) {
+                mutable = v;
+                return this;
+            }
+
+            State create() {
+                return new State(
+                        currentTest,
+                        out,
+                        err,
+                        mutable ? new HashMap<>(properties) : Map.copyOf(properties),
+                        trace,
+                        traceAsserts,
+                        verboseJPackage,
+                        verboseTestSetup);
+            }
+
+            private TestInstance currentTest;
+            private PrintStream out;
+            private PrintStream err;
+            private Map<Object, Object> properties = new HashMap<>();
+
+            private boolean trace;
+            private boolean traceAsserts;
+
+            private boolean verboseJPackage;
+            private boolean verboseTestSetup;
+
+            private boolean mutable = true;
+        }
+
+
+        private final TestInstance currentTest;
+        private final PrintStream out;
+        private final PrintStream err;
+
+        private final Map<Object, Object> properties;
+
+        private final boolean trace;
+        private final boolean traceAsserts;
+
+        private final boolean verboseJPackage;
+        private final boolean verboseTestSetup;
+    }
+
+
+    private static final ScopedValue<State> STATE = ScopedValue.newInstance();
+    private static final State DEFAULT_STATE = State.build().initDefaults().mutable(false).create();
 }
